(Home) Fix overflow + decrease title font-weight

--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -1,3 +1,12 @@
+:host {
+    height: 100%;
+}
+img {
+  margin-top: 10px;
+}
+h1 {
+  font-weight: 200;
+}
 form {
 	width: 200px; margin: 20px auto;
 	mat-form-field {
