--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,4 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body { height: 100%; width: 100%; margin: 0; display: flex;}
+body { font-family: Roboto, "Helvetica Neue", sans-serif; }
+app-root {
+  width: 100%;
+  height: 100%;
+}
